fix: refac others class